--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,8 @@
+button:hover,
+a:hover {
+	opacity: 0.7;
+}
+
 footer {
 	background-color: #e0e5de;
 	color: white;
@@ -20,6 +25,13 @@ p {
 .article {
 	width: 50%;
 	margin: auto;
+}
+
+.card {
+	box-shadow: 2 4px 8px 2 rgba(0, 0, 0, 0.2);
+	max-width: 400px;
+	margin: auto;
+	text-align: center;
 }
 
 .carousel {
@@ -56,6 +68,19 @@ p {
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
+}
+
+#btnContact {
+	border: none;
+	outline: 0;
+	display: inline-block;
+	padding: 8px;
+	color: white;
+	background-color: #000;
+	text-align: center;
+	cursor: pointer;
+	width: 100%;
+	font-size: 18px;
 }
 
 #footerp {
