--- a/custom.css
+++ b/custom.css
@@ -42,6 +42,17 @@ p {
 	margin-right: auto;
 }
 
+.gabby {
+	width: 100%; /* Full width */
+	padding: 12px; /* Some padding */
+	border: 1px solid #ccc; /* Gray border */
+	border-radius: 4px; /* Rounded borders */
+	box-sizing: border-box; /* Make sure that padding and width stays in place */
+	margin-top: 6px; /* Add a top margin */
+	margin-bottom: 16px; /* Bottom margin */
+	resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
 .navbar {
 	background-color: #e0e5de;
 	margin-bottom: 15px;
@@ -85,6 +96,13 @@ p {
 
 #footerp {
 	color: #000;
+}
+
+#infoH {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
+	margin-top: 10px;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
